docs: give the Java and Python clients the same docs as Rust